SimpleComplex/Validate 1.x, 2017-08-05
--------------------------------------
- Validation rule set class.

SimpleComplex/Validate 1.x, 2017-07-12
--------------------------------------
- Release 0.9.

SimpleComplex/Validate 1.x, 2017-06-27
--------------------------------------
- Validate no longer uses a logger, and option errUnconditionally removed.
  Use a good error handler instead.

SimpleComplex/Validate 1.x, 2017-06-20
--------------------------------------
- Rule method empty() missed support for ArrayAccess class.
- Type alias of a non-ArrayAccess Traversable is 'traversable'; not 'iterable'.
- keyedIterable() must return 'traversable' on non-ArrayAccess Traversable;
  not false.
- Pseudo-rule 'tableElements' replaces '_elements_'.
- New pseudo-rule 'listItemPrototype' for validating repeated similar
  items of a list.

SimpleComplex/Validate 1.x, 2017-06-19
--------------------------------------
- Accept iterable rules, not just array.

SimpleComplex/Validate 1.x, 2017-06-18
--------------------------------------
- Denominate object/array as 'container'; not 'collection'.
- Method container replaces collection.
  New methods iterable and indexedIterable.
  Method keyedIterable replaces hashTable.
  numArray/assocArray renamed to indexedArray/keyedArray.
- ValidateByRules is now able to iterate ArrayAccess vars.

SimpleComplex/Validate 1.x, 2017-06-16
--------------------------------------
- Inline coded getInstance trait instead of using trait; IDE cannot resolve
  (class) return type of trait.

SimpleComplex/Validate 1.x, 2017-06-07
--------------------------------------
- name(), snakeName(), lispName(). name() now allows underscore and hyphen.

SimpleComplex/Validate 1.x, 2017-06-05
--------------------------------------
- Validate allow extending constructur to provide dependency by other means.
- Removed rule methods asciiLowerCase and asciiUpperCase. Added 'case' parameter
  to relevant rule methods instead.